Introduce guard types
Introduce the types of guard a guard can select and types of guard a service provider may offers

--- a/client/src/app/pages/service-provider-setting/service-provider-setting.component.html
+++ b/client/src/app/pages/service-provider-setting/service-provider-setting.component.html
@@ -13,8 +13,7 @@
                     <app-base-input label="Company Registration Number" name="companyRegistrationNumber"
                         [(ngModel)]="providerFormModel.companyRegistrationNumber" [required]="true">
                     </app-base-input>
-                    <app-error-message
-                        [errorMessage]="providerErrors.companyRegistrationNumber"></app-error-message>
+                    <app-error-message [errorMessage]="providerErrors.companyRegistrationNumber"></app-error-message>
                 </div>
             </div>
         </app-section>
@@ -102,6 +101,18 @@
             </div>
         </app-section>
 
+        <app-section title="Available Security Personnel Expertise" subtitle="Select all applicable types.">
+            <div class="flex flex-col">
+                <div class="flex flex-col">
+                    <app-multiselect-input label="Guard types You would like to offer" name="guardTypes"
+                        [(ngModel)]="providerFormModel.guardType" [options]="guardTypeOptions"
+                        placeholder="Select guard types you specialize in" [required]="true" [searchable]="true">
+                    </app-multiselect-input>
+                    <app-error-message [errorMessage]="providerErrors.guardType || null"></app-error-message>
+                </div>
+            </div>
+        </app-section>
+
         <app-section title="Security License" subtitle="Must be active to deploy guards.">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="flex flex-col">
@@ -127,8 +138,8 @@
 
                 <div class="flex flex-col md:col-span-2">
                     <app-file-upload label="License Document" name="licenseDocument"
-                        [(ngModel)]="providerFormModel.securityLicense.document"
-                        helperText="PNG, JPG, PDF up to 10MB" [required]="false">
+                        [(ngModel)]="providerFormModel.securityLicense.document" helperText="PNG, JPG, PDF up to 10MB"
+                        [required]="false">
                     </app-file-upload>
                     <p class="text-xs text-gray-500 mt-2">Optional upload now avoids later holds.</p>
                 </div>
@@ -137,12 +148,8 @@
 
         <app-section title="Operating Regions" subtitle="Start with primary jurisdictions.">
             <ng-container section-actions>
-                <app-button
-                    [label]="'Add region'"
-                    type="outline"
-                    [htmlType]="'button'"
-                    [customClass]="'hidden md:inline-flex rounded-lg'"
-                    (click)="addRegion()">
+                <app-button [label]="'Add region'" type="outline" [htmlType]="'button'"
+                    [customClass]="'hidden md:inline-flex rounded-lg'" (click)="addRegion()">
                 </app-button>
             </ng-container>
 
@@ -155,25 +162,16 @@
                 </div>
                 <app-error-message [errorMessage]="providerErrors.operatingRegions"></app-error-message>
 
-                <app-button
-                    [label]="'Add another region'"
-                    type="outline"
-                    [htmlType]="'button'"
-                    [fullWidth]="true"
-                    [customClass]="'md:hidden rounded-lg'"
-                    (click)="addRegion()">
+                <app-button [label]="'Add another region'" type="outline" [htmlType]="'button'" [fullWidth]="true"
+                    [customClass]="'md:hidden rounded-lg'" (click)="addRegion()">
                 </app-button>
             </div>
         </app-section>
 
         <app-section title="Guard Categories Offered" subtitle="E.g., Patrol, Concierge, Event.">
             <ng-container section-actions>
-                <app-button
-                    [label]="'Add category'"
-                    type="outline"
-                    [htmlType]="'button'"
-                    [customClass]="'hidden md:inline-flex rounded-lg'"
-                    (click)="addCategory()">
+                <app-button [label]="'Add category'" type="outline" [htmlType]="'button'"
+                    [customClass]="'hidden md:inline-flex rounded-lg'" (click)="addCategory()">
                 </app-button>
             </ng-container>
 
@@ -186,13 +184,8 @@
                 </div>
                 <app-error-message [errorMessage]="providerErrors.guardCategories"></app-error-message>
 
-                <app-button
-                    [label]="'Add another category'"
-                    type="outline"
-                    [htmlType]="'button'"
-                    [fullWidth]="true"
-                    [customClass]="'md:hidden rounded-lg'"
-                    (click)="addCategory()">
+                <app-button [label]="'Add another category'" type="outline" [htmlType]="'button'" [fullWidth]="true"
+                    [customClass]="'md:hidden rounded-lg'" (click)="addCategory()">
                 </app-button>
             </div>
         </app-section>
@@ -203,21 +196,11 @@
         </div>
 
         <app-sticky-action-bar [message]="'Save to activate your provider profile.'" [containerClass]="'px-0'">
-            <app-button *ngIf="!isEditMode"
-                [label]="'Submit'"
-                type="primary"
-                [htmlType]="'submit'"
-                [fullWidth]="true"
-                size="lg"
-                [customClass]="'w-full md:w-auto rounded-lg'">
+            <app-button *ngIf="!isEditMode" [label]="'Submit'" type="primary" [htmlType]="'submit'" [fullWidth]="true"
+                size="lg" [customClass]="'w-full md:w-auto rounded-lg'">
             </app-button>
-            <app-button *ngIf="isEditMode"
-                [label]="'Save Changes'"
-                type="success"
-                [htmlType]="'submit'"
-                [fullWidth]="true"
-                size="lg"
-                [customClass]="'w-full md:w-auto rounded-lg'">
+            <app-button *ngIf="isEditMode" [label]="'Save Changes'" type="success" [htmlType]="'submit'"
+                [fullWidth]="true" size="lg" [customClass]="'w-full md:w-auto rounded-lg'">
             </app-button>
         </app-sticky-action-bar>
     </form>
