--- a/client/src/app/components/form/file-upload/file-upload.component.html
+++ b/client/src/app/components/form/file-upload/file-upload.component.html
@@ -13,10 +13,16 @@
           <p class="text-xs text-gray-500 dark:text-gray-400">Currently uploaded</p>
         </div>
       </div>
-      <a *ngIf="existingFileUrl" [href]="existingFileUrl" target="_blank" rel="noopener"
-         class="text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 font-medium">
-        View
-      </a>
+      <div class="flex items-center gap-3">
+        <a *ngIf="existingFileUrl" [href]="existingFileUrl" target="_blank" rel="noopener"
+           class="text-sm text-blue-600 hover:text-blue-800 dark:text-blue-400 dark:hover:text-blue-300 font-medium">
+          View
+        </a>
+        <button type="button" (click)="removeFile()" [disabled]="disabled"
+                class="text-sm text-red-600 hover:text-red-800 dark:text-red-400 dark:hover:text-red-300 font-medium disabled:opacity-50">
+          Remove
+        </button>
+      </div>
     </div>
   </div>
 
